fix problem with contact alignment

--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ a {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  -webkit-justify-content: space-around;
   justify-content: space-around;
   padding: 10px;
 }
@@ -203,13 +204,13 @@ hr {
 }
 
 #header img {                
-  border: 6px solid #fff;
-  padding: 0;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
   border-radius: 50%;
+  border: 6px solid #fff;
+  padding: 0;
 }
 
 .welcome-message p {
@@ -383,7 +384,13 @@ h1#name + span {
 
 @media only screen and (max-width: 400px) {
   .biopic {
-    width: 105px;
+    width: 135px;
+    margin-bottom: 20px;
+  }
+  #topContacts.flex-box,
+  #footerContacts.flex-box {
+    display: block;
+    text-align: center;
   }
 }
 
